KKD-509 - Tooltip overflow fix

--- a/public/css/src/components/article.less
+++ b/public/css/src/components/article.less
@@ -28,6 +28,7 @@
         @media screen and (min-width: 768px) {
             width: 250px;
             position: relative;
+            z-index: 1;
 
             &:after {
                 content: '';
@@ -52,6 +53,7 @@
             display: block;
             width: 280px;
             position: relative;
+            z-index: 1;
         }
     }
 
@@ -66,6 +68,8 @@
 
         @media screen and (min-width: 1280px) {
             width: ~"calc(100% - 560px)";
+            position: relative;
+            z-index: 2;
         }
     }
 
